/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/8.0.2/userguide/building_java_projects.html
 * This project uses @Incubating APIs which are subject to change.
 */

import java.nio.file.FileSystems
import java.nio.file.Files

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    application
    id("org.openjfx.javafxplugin") version "0.1.0"
    id("com.github.ben-manes.versions") version "0.53.0"
    id("com.adarshr.test-logger") version "4.0.0"
    id("org.beryx.jlink") version "3.2.0"
}

version = "2.1.0"

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(25))
    }
}

javafx {
    version = "25.0.1"
    modules("javafx.controls", "javafx.fxml", "javafx.media")
}

repositories {
    mavenLocal()
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

//Resolve the used operating system
var currentOS = org.gradle.nativeplatform.platform.internal.DefaultNativePlatform.getCurrentOperatingSystem()
var platform = ""
if (currentOS.isMacOsX) {
    platform = "mac"
} else if (currentOS.isLinux) {
    platform = "linux"
} else if (currentOS.isWindows) {
    platform = "win"
}

configurations.all {
    // Exclude stax-api as javax.xml.stream is part of java.xml platform module
    exclude(group = "javax.xml.stream", module = "stax-api")
    exclude(group = "stax", module = "stax-api")
}

dependencies {

    // This has to match the okhttp version used in org.mbari.vars.services or
    // we get java.lang.NoClassDefFoundError: kotlin/jvm/internal/Intrinsics
//    implementation("com.squareup.okhttp3:okhttp:3.14.9")

    // This dependency is used by the application.
    implementation("ch.qos.logback:logback-classic:1.5.24")
    implementation("com.github.ben-manes.caffeine:caffeine:3.1.8")
    implementation("com.github.mizosoft.methanol:methanol:1.7.0")
    implementation("com.google.code.gson:gson:2.10.1")
    implementation("com.squareup.okhttp3:logging-interceptor:3.14.4")
    implementation("org.controlsfx:controlsfx:11.2.3")
    implementation("org.mbari.commons:jcommons:0.0.7")
    implementation("org.mbari.imgfx:imgfx:0.0.17")
    implementation("org.mbari.vars:annosaurus-java-sdk:0.0.11")
    implementation("org.mbari.vars:oni-java-sdk:0.0.6")
    implementation("org.mbari.vars:raziel-java-sdk:0.0.4")
    implementation("org.mbari.vars:vampire-squid-java-sdk:0.0.14")
    implementation("org.mbari.vcr4j:vcr4j-core:5.3.1")
    implementation("org.slf4j:slf4j-jdk-platform-logging:2.0.17")
}



testing {
    suites {
        // Configure the built-in test suite
        val test by getting(JvmTestSuite::class) {
            // Use JUnit Jupiter test framework
            useJUnitJupiter("6.0.2")

        }
    }
}

tasks.named<Test>("test") {
    useJUnitPlatform()

    maxHeapSize = "1G"

    testLogging {
        events("passed")
    }
}

val runtimeJvmArgs = arrayListOf(
    "-XX:+TieredCompilation",
    "-XX:TieredStopAtLevel=1",
    "-Xms1g",
//    "--add-opens", "java.base/java.lang.invoke=retrofit2",
    "--add-opens", "java.base/java.lang.invoke=mondrian.merged.module",
    "--add-reads", "mondrian.merged.module=org.slf4j",
    "--add-reads", "mondrian.merged.module=com.google.gson"
)


application {
    // Define the main class for the application.
    mainModule.set("org.mbari.mondrian")
    mainClass.set("org.mbari.mondrian.App")
    if(platform.equals("mac")) {
        applicationDefaultJvmArgs = listOf("-Dsun.java2d.metal=true")
    }
    applicationDefaultJvmArgs = runtimeJvmArgs
}

// Patch reactor-core jar to remove problematic service providers
// This runs before jlink processes dependencies
tasks.register("patchReactorCore") {
    doLast {
        val reactorJars = configurations.runtimeClasspath.get().files.filter {
            it.name.contains("reactor-core") && it.name.endsWith(".jar")
        }
        reactorJars.forEach { jarFile ->
            println("Patching ${jarFile.name} to remove optional service providers")
            val fs = FileSystems.newFileSystem(jarFile.toPath(), null as ClassLoader?)
            try {
                val servicesToRemove = listOf(
                    "META-INF/services/io.micrometer.context.ContextAccessor",
                    "META-INF/services/reactor.blockhound.integration.BlockHoundIntegration"
                )
                servicesToRemove.forEach { servicePath ->
                    val path = fs.getPath(servicePath)
                    if (Files.exists(path)) {
                        Files.delete(path)
                        println("  Removed $servicePath")
                    }
                }
            } finally {
                fs.close()
            }
        }
    }
}

tasks.named("createMergedModule") {
    dependsOn("patchReactorCore")
}

jlink {
    // Use the configured Java toolchain
    javaHome.set(project.javaToolchains.launcherFor(java.toolchain).get().metadata.installationPath.asFile)

    options.set(listOf("--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages", "--ignore-signing-information"))

    launcher {
        name = "Mondrian"
        jvmArgs = runtimeJvmArgs
    }

    mergedModule {
        additive = true

        // Add missing platform module requirements
//        requires("java.logging")

        // Add uses clauses for Azure and OpenTelemetry service loaders if needed at runtime
        uses("io.opentelemetry.context.ContextStorageProvider")
        uses("com.azure.core.util.tracing.Tracer")
        uses("com.azure.core.util.serializer.JsonSerializer")
        uses("com.azure.core.util.serializer.MemberNameConverter")
        uses("com.azure.core.http.policy.AfterRetryPolicyProvider")
        uses("com.azure.core.http.policy.BeforeRetryPolicyProvider")
    }

//    launcher {
//        noConsole = true
//    }
    jpackage {
        val customInstallerOptions = arrayListOf(
            "--app-version", project.version.toString(),
            "--copyright", "Monterey Bay Aquarium Research Institute 2023",
            "--name", "Mondrian",
            "--vendor", "org.mbari"
        )

        if (platform == "mac") {
            installerType = "dmg"
            customInstallerOptions.addAll(listOf(
                "--mac-package-name", "Mondrian",
                "--mac-package-identifier", project.name.toString()
            ))
            imageOptions = listOf("--icon", "src/jpackage/macos/Mondrian.icns")
        }
        else if (platform == "linux") {
            installerType = "deb"
            customInstallerOptions.addAll(listOf(
                "--linux-shortcut", "true",
                "--linux-menu-group", "VARS"
            ))
            imageOptions = listOf("--icon", "src/jpackage/linux/icon_256x256.png")
        }
        else if (platform == "win") {
            installerType = "msi"
            customInstallerOptions.addAll(listOf(
                "--win-upgrade-uuid", "049e10bd-47c3-42b4-b39d-f37c3c94c689",
                "--win-menu-group", "VARS",
                "--win-menu"
            ))
            imageOptions = listOf("--icon", "src/jpackage/win/icon_256x256.ico")
        }
        installerOptions = customInstallerOptions
    }
}

tasks.jpackageImage.get().doLast {
    if (platform == "mac") {
        val signer = System.getenv("MAC_CODE_SIGNER")
        if (signer != null) {
            val dirsToBeSigned = arrayListOf(
                file("${projectDir}/build/jpackage/Mondrian.app/Contents/runtime/Contents/Home/bin"),
                file("${projectDir}/build/jpackage/Mondrian.app/Contents/runtime/Contents/Home/lib"),
                file("${projectDir}/build/jpackage/Mondrian.app/Contents/runtime/Contents/Home/lib/server"),
                file("${projectDir}/build/jpackage/Mondrian.app/Contents/runtime/Contents/MacOS")
            )

            val entitlements = "${projectDir}/src/jpackage/macos/java.entitlements"
            val jpackageDir = file("${projectDir}/build/jpackage")

            dirsToBeSigned.forEach { dir ->
                println("Signing $dir")
                val files = layout.files(dir.listFiles())
                files
                    .filter { it.isFile }
                    .forEach { f ->
                        println("MACOSX: Signing ${f}")
                        ProcessBuilder(listOf(
                            "codesign",
                            "--entitlements", entitlements,
                            "--options", "runtime",
                            "--timestamp",
                            "-vvv",
                            "-f",
                            "--sign", signer,
                            f.absolutePath
                        ))
                            .directory(jpackageDir)
                            .inheritIO()
                            .start()
                            .waitFor()
                    }
            }

            println("MACOSX: Signing application")
            ProcessBuilder(listOf(
                "codesign",
                "--entitlements", entitlements,
                "--options", "runtime",
                "--timestamp",
                "-vvv",
                "-f",
                "--sign", signer,
                "Mondrian.app"
            ))
                .directory(jpackageDir)
                .inheritIO()
                .start()
                .waitFor()
        }
    }
}